[package]
name = "dour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array_pattern = { version = "0.1.1", path = "../../util/array_pattern" }
error_reporter = { version = "0.1.0", path = "../../util/error_reporter" }
